# rag

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Dockerfile.pip  Dockerfile.streamlit  docker-compose.yml  example.env  main.py  pyproject.toml  requirements.txt  start.sh  streamlit_app.py
api/: dependencies.py  schemas.py
api/v1/: routes.py
configs/: __init__.py  app_settings.py  rag_configs.py
data_processing/: base.py  loader.py  loader_factory.py  s3_loader.py  splitters.py
docker/: docker-compose.main.yml
llm/: base_llm_client.py  client.py  gigachat.py  mistral.py  openai.py
rag/: chat_history_manager.py  models.py  orchestrator.py  prompt_templates.py  reranker.py  utils.py
tests/: test_chunking.py  test_s3_functionality.py  test_s3_integration.py  test_s3_loader.py
ui/: api_client.py  components.py  s3_client.py
vector_store/: factory.py  faiss_store.py  vector_store.py
